# erdos-scheduling-simulator

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Plotting.ipynb  README.md  Scheduler.ipynb  Untitled.ipynb  analyze.py  analyze_utils.sh  benchmark_ilp_schedulers.py  boolector_scheduler.py  data_loader.py  ilp_benchmark_utils.py  main.py  profile.ipynb  pylot.csv  replayer.py  requirements.txt  scheduler.py  setup.cfg  setup.py  sim.py  simulator.py  test_flowlessly.py  utils.py  utils_tpch.py  z3_scheduler.py
.devcontainer/: Dockerfile  devcontainer.json
configs/: alibaba_easy_medium_hard.conf  alibaba_easy_medium_hard_dagsched.conf  alibaba_easy_medium_hard_edf.conf  alibaba_easy_medium_hard_min_jct.conf  alibaba_easy_medium_hard_tetrisched.conf  alibaba_edf_fixed.conf  alibaba_tetrisched_adaptive_discretization.conf  alibaba_tetrisched_adaptive_discretization_1_10.conf  alibaba_tetrisched_adaptive_discretization_1_20.conf  alibaba_tetrisched_discrete_1.conf  alibaba_tetrisched_discrete_1_no_dag_awareness.conf  alibaba_tetrisched_dynamic_discretization_1_5.conf  alibaba_tetrisched_dynamic_discretization_1_5_max_occupancy_1000.conf  alibaba_trace.conf  branch_prediction.conf  clockwork_bursty.conf  clockwork_resnet50_microbenchmark.conf  dagsched_dyn_arrival_0.025_0.013.conf  default.conf  edf_adversarial.conf  ilp_test.conf  llama_workload.conf  llama_workload_edf.conf  llama_workload_edf_packing.conf  llama_workload_ilp.conf  new_av_workload.conf  new_av_workload_dag_unaware.conf  new_motiv_new_conf_sukrit_runs_strl_1_8.conf  new_motiv_new_conf_sukrit_runs_strl_1_8_selective.conf  sanity_check_hetero.conf  sanity_check_homo.conf  simple_av_workload.conf  simple_graphene_workload.conf  simple_sampling_workload.conf  simple_workload_edf.conf  simple_workload_flow.conf  tpch.conf  tpch_replay.conf  tpch_replay_dsched.conf  tpch_replay_edf.conf  (+1 more)
data/: __init__.py  alibaba_loader.py  alibaba_loader_v2.py  base_workload_loader.py  csv_reader.py  csv_types.py  job_graph_loader.py  loader.py  plotter.py  pylot-complete-graph.dot  pylot_1_camera_1_lidar_resource_profile.json  pylot_profile.json  pylot_resource_profile.json  task_loader.py  task_loader_benchmark.py  task_loader_json.py  task_loader_pylot.py  task_loader_synthetic.py  tpch_loader.py  worker_2_machines_24_cpus_2_gpus_profile.json  worker_2_machines_24_cpus_4_gpus_profile.json  worker_2_machines_24_cpus_6_gpus_profile.json  worker_2_machines_48_cpus_8_gpus_profile.json  worker_loader.py  worker_loader_benchmark.py  worker_loader_json.py  worker_profile.json  workload_loader.py  workload_loader_clockwork.py  workload_loader_clockwork_bursty.py  workload_loader_dynamic.py  workload_loader_v2.py
experiments/: alibaba_trace_analysis.ipynb  analysis.ipynb  analysis_utils.py  individual_run_analysis.ipynb  sanity_check.ipynb
notebooks/: replayer.ipynb  scheduler.ipynb
plots/: Plotting.ipynb  capacity_constraint_map_plotting.ipynb
plotting/: plot_simulator_graphs.py
rpc/: README.md  requirements.txt  service.py  service_old.py  spark_erdos_setup.md  tpch_utils.py
schedulers/: README.md  __init__.py  base_scheduler.py  boolector_scheduler.py  branch_prediction_scheduler.py  clockwork_scheduler.py  edf_scheduler.py  erdos_scheduler.cpp  erdos_scheduler.py  fifo_scheduler.py  flow_scheduler.py  graphene_scheduler.py  gurobi_scheduler.py  ilp_scheduler.py  ilp_utils.py  lsf_scheduler.py  test_flowlessly.py  tetri_sched.py  tetrisched_cplex_scheduler.py  tetrisched_gurobi_scheduler.py  tetrisched_scheduler.py  z3_scheduler.py  z3_scheduler_new.py
schedulers/Flowlessly/: .gitignore  CMakeLists.txt
schedulers/Flowlessly/cmake/: ExternalDependencies.cmake
schedulers/Flowlessly/src/: CMakeLists.txt  flow_scheduler.cc
schedulers/Flowlessly/src/graphs/: adjacency_map_graph.cc  graph.cc  graph.h
schedulers/Flowlessly/src/python/: Flowlessly.cpp
schedulers/tetrisched/: .CMakeLists.txt.swp  CMakeLists.txt  README.md
schedulers/tetrisched/include/tetrisched/: CPLEXSolver.hpp  CapacityConstraint.hpp  Expression.hpp  GoogleCPSolver.hpp  GurobiSolver.hpp  OptimizationPasses.hpp  Partition.hpp  Scheduler.hpp  Solver.hpp  SolverModel.hpp  Task.hpp  Types.hpp  Worker.hpp
schedulers/tetrisched/python/: Backends.cpp  Expressions.cpp  SolverModel.cpp  TetrischedPy.cpp
schedulers/tetrisched/python/stubs/tetrisched_py/: __init__.pyi  backends.pyi  model.pyi  strl.pyi
schedulers/tetrisched/scripts/: analyze_performance.py
schedulers/tetrisched/src/: .tetrisched.cpp.swp  CPLEXSolver.cpp  CapacityConstraint.cpp  Expression.cpp  Expression.hpp  GoogleCPSolver.cpp  GurobiSolver.cpp  Job.hpp  OptimizationPasses.cpp  Partition.cpp  Scheduler.cpp  Solver.cpp  Solver.hpp  SolverModel.cpp  SolverModel.hpp  Types.cpp  Util.cpp  Util.hpp  Worker.cpp  Worker.hpp  common.hpp  tetrisched.cpp
schedulers/tetrisched/test/: test_expression.cpp  test_optimization.cpp  test_partitions.cpp  test_solver.cpp  test_work.cpp
scripts/: check_experiment_status.sh  run_alibaba_experiments.sh  run_alibaba_experiments_12_10_day_straightChainDags_minLen4_homo_dynamicDis_max5_10slots_75invoc_divisor50.sh  run_alibaba_experiments_12_10_night_straightChainDags_minLen4_homo_dynamicDis_max5_10slots_75invoc_divisor50.sh  run_alibaba_experiments_12_10_night_sysml_02_dag_gt_4_homo_40_slots_duration_1.5x.sh  run_alibaba_experiments_12_10_night_sysml_05_dag_gt_4_hetero_40_slots_duration_1.5x.sh  run_alibaba_experiments_12_11_noon_sysml_02_chain_dag_homo_10_slots_random_duration_clip_deadline_to_5.sh  run_alibaba_experiments_12_12_night_sysml_02_chain_dag_homo_10_slots_random_duration_clip_deadline_to_5.sh  run_alibaba_experiments_12_14_night_straightChainDags_minLen4_homo_strl1_10slots_50invoc_cpudivisor25.sh  run_alibaba_experiments_12_14_night_straightChainDags_minLen4_homo_strl1_10slots_50invoc_pow2slots_max8.sh  run_alibaba_experiments_12_15_morning_sysml_02_chain_dag_homo_10_slots_random_duration_clip_deadline_to_5.sh  run_alibaba_experiments_12_19_night_sysml_02_chain_dag_homo_10_slots_clip_deadline_to_5.sh  (+87 more)
(+177 files in other folders)
